# Compiler

./: .gitignore  CMakeLists.txt  Changelog  Doxyfile.in  FieldApp.md  KaleidoscopeJIT.h  LICENSE  Makefile  Makefile.in  README.md  Toy.cc  VersionConfig.h.in  config.status  configure  modify.md  parser
autom4te.cache/: output.0  requests  traces.1
compiler/: CMakeLists.txt  grammer.y  lexicon.l  main.cc
compiler v2/: CMakeLists.txt
compiler v2/src/: main.cc
compiler v2/src/parse/: parse.yy  scan.ll
compiler v2/test/: sources.txt
compiler/GOL/: RectangularVectors.h  stringbuilder.h  test.cpp  test.h
compiler/SyntaxTree/: Function.hpp  Includes.hpp  Input.hpp  Name.hpp  Statement.hpp  Statements.hpp  SyntaxTree.hpp
docs/: graph_legend.html  index.html
src/: Makefile  Makefile.am  Makefile.in  hello  main.cc
src/.deps/: toy.Po
test/: enterName.code  recode.code
